--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,6 @@ height: 35px;
   letter-spacing: 35px;
 
   animation: moveInLeft 1s ease-out;
-
-  /* animation-name: moveInRight;
-  animation-duration: 1s; */
-
-  /* animation-iteration-count: 3;
-  animation-delay: 3s;
-  animation-timing-function: ease-out; */
-
 }
 
 .heading-primary-sub {
@@ -106,6 +98,18 @@ height: 35px;
   }
 }
 
+@keyFrames moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px)
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0)
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -113,7 +117,8 @@ height: 35px;
   padding: 15px 40px;
   display: inline-block;
   border-radius: 100px;
-  transition: all .5s;
+  transition: all .2s;
+  position: relative ;
 }
 
 .btn:hover {
@@ -130,4 +135,31 @@ height: 35px;
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
 }
