--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -28,6 +28,12 @@
       &-1 {
         background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
       }
+      &-2 {
+        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+      }
+      &-3 {
+        background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+      }
     }
   }
 
@@ -39,12 +45,16 @@
     transform: rotateY(0deg);
   }
 
+  // Front side styling
+
   &__picture {
     background-size: cover;
     height: 23rem;
     background-blend-mode: color;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     &--1 {
       background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), 
@@ -52,11 +62,13 @@
     }
     
     &--2 {
-      background-image: url(../img/nat-5.jpg)
+      background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
+      url(../img/nat-6.jpg)
     }
     
     &--3 {
-      background-image: url(../img/nat-5.jpg)
+      background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
+      url(../img/nat-7.jpg)
     }
   }
 
@@ -72,7 +84,7 @@
     width: 75%;
   }
   &__heading-span {
-    padding: 1rem 1.5rem;
+    padding: 0.5rem 1.5rem;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone; //applies all the declarations to both the boxes(lines)
 
@@ -80,6 +92,16 @@
       background-image: linear-gradient(to right bottom, 
       rgba($color-secondary-light, .85), 
       rgba($color-secondary-dark, .85));
+    }
+    &--2 {
+      background-image: linear-gradient(to right bottom, 
+      rgba($color-primary-light, .85), 
+      rgba($color-primary-dark, .85));
+    }
+    &--3 {
+      background-image: linear-gradient(to right bottom, 
+      rgba($color-tertiary-light, .85), 
+      rgba($color-tertiary-dark, .85));
     }
   }
 
@@ -103,4 +125,29 @@
     }
   }
 
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  &__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: $color-white;
+  }
+  
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
+  }
 }
+
