--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,10 +11,13 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/story";
+@import "components/bg-video";
 
 
 @import 'layout/header';
 @import 'layout/grid';
 
 @import 'pages/home';
+
 
